Cambios en la redirección

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta http-equiv="refresh"
+   content="0; url=/docs/">
 <title>Script Hub</title>
 <meta property="og:title" content="Script Hub - Documentación y Bots sobre Discord" />
 <meta property="og:locale" content="es_ES" />
