--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh"
-   content="0; url=/docs/">
+
 <title>Script Hub</title>
 <meta property="og:title" content="Script Hub - Documentación y Bots sobre Discord" />
 <meta property="og:locale" content="es_ES" />
@@ -37,6 +36,11 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
+    <script type="text/javascript">
+    var timer = setInterval(function(){
+    clearInterval(timer);
+    window.location = "/docs/"     
+},3000);</script>
     
   </body>
 </html>
