--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
   <link rel="canonical" href="https://scripthubteam.github.io/" />
   <link rel="shortcut icon" href="./docs/assets/favicon/favicon-96x96.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -52,7 +53,11 @@
     <nav class="navbar navbar-dark" style="background-color: #212121;">
   <img src="./docs/assets/logo-cord-raw.png" class="animated fadeInLeftBig" href="#" width="70">
   <form class="form-inline">
-    <button class="btn btn-info" type="button">¿Un botón?</button>
+    <a href="/docs"><button class="btn btn-info" type="button"><i class="fas fa-book"></i> Documentación</button></a>
+    <a href="https://www.patreon.com/scripthubteam"><button class="btn btn-warning" type="button"><i class="fab fa-patreon"></i> Patreon</button></a>
+    
+    <a href="https://discord.gg/VK2V7Yk"><font size=5 color="white"><i class="fab fa-discord"></i></a>
+  </font>
   </form>
 </nav>
 </head>
@@ -60,7 +65,8 @@
 <body>
 
     <!-- Start your project here-->
-			<div class="carousel slide" id="carousel-915204">
+			
+      <!-- <div class="carousel slide" id="carousel-915204">
 				<ol class="carousel-indicators">
 					<li data-slide-to="0" data-target="#carousel-915204" class="active">
 					</li>
@@ -106,11 +112,14 @@
 				</div> <a class="carousel-control-prev" href="#carousel-915204" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-915204" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <!-- 02 -->
 
-    <div style="height: 100vh">
+    <div style="height: 70vh">
         <div class="flex-center flex-column">
+          <center><img src="./docs/assets/logo-bn.png"></center>
+          <br>
+          <br>
             <h1 class="animated fadeIn mb-4">Programación de bots con Discord en Español.</h1>
 
             <h6 class="animated fadeIn mb-3" align="center"><i>"Somos una comunidad de programadores que escribe guías, compartimos nuestras experiencias y ayudamos a responder dudas sobre programación."</i></h5>
