Reformatting and deleting duplicated meta tag

--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
-
 <!DOCTYPE html>
 <html lang="es">
-
+	
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Script Hub - Documentación y Bots</title>
     <!-- Básico -->
-  <meta name="theme-color" content="#FF0044">
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge"> 
+    <meta name="theme-color" content="#FF0044">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta property="og:title" content="Script Hub - Documentación y Bots">
-  <meta property="og:description" content="Programación de bots con Discord en español.">
-  <meta property="og:image" content="./docs/assets/server-ui/logo-cord-re.png">
-  <meta property="og:url" content="https://scripthubteam.github.io/">
-  <meta property="og:site_name" content="Script Hub">
-  <meta property="og:type" content="website">
-  
-  <!-- Motor de búsqueda -->
-  <meta name="description" content="Script Hub - Documentación y Bots">
-  <meta name="image" content="./docs/assets/server-ui/logo-cord-re.png">
-  <link rel="canonical" href="https://scripthubteam.github.io/" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta property="og:title" content="Script Hub - Documentación y Bots">
+    <meta property="og:description" content="Programación de bots con Discord en español.">
+    <meta property="og:image" content="./docs/assets/server-ui/logo-cord-re.png">
+    <meta property="og:url" content="https://scripthubteam.github.io/">
+    <meta property="og:site_name" content="Script Hub">
+    <meta property="og:type" content="website">
 
-  <!-- Schema.org Google -->
-  <meta itemprop="name" content="Script Hub - Documentación y Bots">
-  <meta itemprop="description" content="Programación de bots con Discord en español.">
-  <meta itemprop="image" content="./docs/assets/server-ui/assets/logo-cord-re.png">
+    <!-- Motor de búsqueda -->
+    <meta name="description" content="Script Hub - Documentación y Bots">
+    <meta name="image" content="./docs/assets/server-ui/logo-cord-re.png">
+    <link rel="canonical" href="https://scripthubteam.github.io/" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Script Hub - Documentación y Bots">
-  <meta name="twitter:description" content="Programación de bots con Discord en español.">
-  <meta name="twitter:image" content="./docs/assets/server-ui/logo-cord-re.png">
+    <!-- Schema.org Google -->
+    <meta itemprop="name" content="Script Hub - Documentación y Bots">
+    <meta itemprop="description" content="Programación de bots con Discord en español.">
+    <meta itemprop="image" content="./docs/assets/server-ui/assets/logo-cord-re.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Script Hub - Documentación y Bots">
+    <meta name="twitter:description" content="Programación de bots con Discord en español.">
+    <meta name="twitter:image" content="./docs/assets/server-ui/logo-cord-re.png">
 
 
-  <link rel="canonical" href="https://scripthubteam.github.io/" />
-  <link rel="shortcut icon" href="./docs/assets/favicon/favicon-96x96.png">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="canonical" href="https://scripthubteam.github.io/" />
+    <link rel="shortcut icon" href="./docs/assets/favicon/favicon-96x96.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -51,22 +50,25 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- Navbar -->
     <nav class="navbar navbar-dark" style="background-color: #212121;">
-  <img src="./docs/assets/logo-cord-raw.png" class="animated fadeInLeftBig" href="#" width="70">
-  <form class="form-inline">
-    <a href="/docs"><button class="btn btn-info" type="button"><i class="fas fa-book"></i> Documentación</button></a>
-    <a href="https://www.patreon.com/scripthubteam"><button class="btn btn-warning" type="button"><i class="fab fa-patreon"></i> Patreon</button></a>
-    
-    <a href="https://discord.gg/VK2V7Yk"><font size=5 color="white"><i class="fab fa-discord"></i></a>
-  </font>
-  </form>
-</nav>
+        <img src="./docs/assets/logo-cord-raw.png" class="animated fadeInLeftBig" href="#" width="70">
+        <form class="form-inline">
+            <a href="/docs"><button class="btn btn-info" type="button"><i class="fas fa-book"></i> Documentación</button></a>
+            <a href="https://www.patreon.com/scripthubteam"><button class="btn btn-warning" type="button"><i class="fab fa-patreon"></i>
+                    Patreon</button></a>
+
+            <a href="https://discord.gg/VK2V7Yk">
+                <font size=5 color="white"><i class="fab fa-discord"></i>
+            </a>
+            </font>
+        </form>
+    </nav>
 </head>
 
 <body>
 
     <!-- Start your project here-->
-			
-      <!-- <div class="carousel slide" id="carousel-915204">
+
+    <!-- <div class="carousel slide" id="carousel-915204">
 				<ol class="carousel-indicators">
 					<li data-slide-to="0" data-target="#carousel-915204" class="active">
 					</li>
@@ -113,30 +115,31 @@
 			</div>
 		</div>
 	</div> -->
-<!-- 02 -->
+    <!-- 02 -->
 
     <div style="height: 70vh">
         <div class="flex-center flex-column">
-          <center><img src="./docs/assets/logo-bn.png"></center>
-          <br>
-          <br>
+            <center><img src="./docs/assets/logo-bn.png"></center>
+            <br>
+            <br>
             <h1 class="animated fadeIn mb-4">Programación de bots con Discord en Español.</h1>
 
-            <h6 class="animated fadeIn mb-3" align="center"><i>"Somos una comunidad de programadores que escribe guías, compartimos nuestras experiencias y ayudamos a responder dudas sobre programación."</i></h5>
+            <h6 class="animated fadeIn mb-3" align="center"><i>"Somos una comunidad de programadores que escribe guías,
+                    compartimos nuestras experiencias y ayudamos a responder dudas sobre programación."</i></h5>
 
-            <p class="animated jello text-muted">ー Script Hub Team</p>
-        
-    <!-- /Start your project here-->
+                <p class="animated jello text-muted">ー Script Hub Team</p>
 
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+                <!-- /Start your project here-->
+
+                <!-- SCRIPTS -->
+                <!-- JQuery -->
+                <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+                <!-- Bootstrap tooltips -->
+                <script type="text/javascript" src="js/popper.min.js"></script>
+                <!-- Bootstrap core JavaScript -->
+                <script type="text/javascript" src="js/bootstrap.min.js"></script>
+                <!-- MDB core JavaScript -->
+                <script type="text/javascript" src="js/mdb.min.js"></script>
 </body>
 
 </html>
