--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
     <link rel="shortcut icon" href="./docs/assets/favicon/favicon-96x96.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/mdbootstrap@4.5.13/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+	<!--
     <nav class="navbar navbar-dark" style="background-color: #212121;">
         <img src="./docs/assets/logo-cord-raw.png" class="animated fadeInLeftBig" href="#" width="70">
         <form class="form-inline">
@@ -64,6 +63,7 @@
             </font>
         </form>
     </nav>
+-->
     <!-- Start your project here-->
 
     <!-- <div class="carousel slide" id="carousel-915204">
@@ -117,7 +117,7 @@
 
     <div style="height: 70vh">
         <div class="flex-center flex-column">
-            <center><img src="./docs/assets/logo-bn.png"></center>
+		<div style="text-align:center"><img src="./docs/assets/logo-bn.png"></div>
             <br>
             <br>
             <h1 class="animated fadeIn mb-4">Programación de bots con Discord en Español.</h1>
@@ -131,13 +131,13 @@
 
                 <!-- SCRIPTS -->
                 <!-- JQuery -->
-                <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+                <script type="text/javascript" src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
                 <!-- Bootstrap tooltips -->
-                <script type="text/javascript" src="js/popper.min.js"></script>
+                <script type="text/javascript" src="https://unpkg.com/popper.js@1.14.5/dist/popper.min.js"></script>
                 <!-- Bootstrap core JavaScript -->
-                <script type="text/javascript" src="js/bootstrap.min.js"></script>
+                <script type="text/javascript" src="https://unpkg.com/bootstrap@4.1.0/dist/js/bootstrap.min.js"></script>
                 <!-- MDB core JavaScript -->
-                <script type="text/javascript" src="js/mdb.min.js"></script>
+                <script type="text/javascript" src="https://unpkg.com/mdbootstrap@4.5.13/js/mdb.min.js"></script>
 </body>
 
 </html>
