--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-	
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -49,21 +49,23 @@
 </head>
 
 <body>
-	<!--
+
     <nav class="navbar navbar-dark" style="background-color: #212121;">
         <img src="./docs/assets/logo-cord-raw.png" class="animated fadeInLeftBig" href="#" width="70">
         <form class="form-inline">
-            <a href="/docs"><button class="btn btn-info" type="button"><i class="fas fa-book"></i> Documentación</button></a>
-            <a href="https://www.patreon.com/scripthubteam"><button class="btn btn-warning" type="button"><i class="fab fa-patreon"></i>
-                    Patreon</button></a>
-
-            <a href="https://discord.gg/VK2V7Yk">
-                <font size=5 color="white"><i class="fab fa-discord"></i>
+            <a href="/docs">
+                <button class="btn btn-info" type="button">
+                    <i class="fas fa-book"></i> Documentación
+                </button>
             </a>
-            </font>
+            <a href="https://www.patreon.com/scripthubteam" class="btn btn-warning">
+                <i class="fab fa-patreon"></i> Patreon
+            </a>
+            <a href="https://discord.gg/VK2V7Yk" class="btn" style="background: #7289DA">
+                <i class="fab fa-discord"></i> Discord
+            </a>
         </form>
     </nav>
--->
     <!-- Start your project here-->
 
     <!-- <div class="carousel slide" id="carousel-915204">
@@ -117,10 +119,9 @@
 
     <div style="height: 70vh">
         <div class="flex-center flex-column">
-		<div style="text-align:center"><img src="./docs/assets/logo-bn.png"></div>
-            <br>
-            <br>
-            <h1 class="animated fadeIn mb-4">Programación de bots con Discord en Español.</h1>
+            <img src="./docs/assets/logo-bn.png">
+            
+            <h1 class="animated fadeIn mb-4 mt-5">Programación de bots con Discord en Español.</h1>
 
             <h6 class="animated fadeIn mb-3" align="center"><i>"Somos una comunidad de programadores que escribe guías,
                     compartimos nuestras experiencias y ayudamos a responder dudas sobre programación."</i></h5>
