Update: Discord Invite

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="https://www.patreon.com/scripthubteam" class="btn btn-warning">
                 <i class="fab fa-patreon"></i> Patreon
             </a>
-            <a href="https://discord.gg/KSDevqR" class="btn" style="background: #7289DA">
+            <a href="https://discord.gg/NnXuHTQ" class="btn" style="background: #7289DA">
                 <i class="fab fa-discord"></i> Discord
             </a>
         </form>
